# tauri-video-batch-downloader

./: .env.localtest  .eslintignore  .eslintrc.json  .gitignore  .prettierrc  AGENTS.md  ARCHITECTURE_PATTERNS.md  BUILD_COMPLETE.md  BUILD_FIXES.md  COMPLETE_FIXES_PATCH.md  CONTRIBUTING.md  CRITICAL_FIXES.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  DEV_GUIDE.md  README.md  RUST_SETUP_GUIDE.md  SETUP_GUIDE.md  TEST_FIX1.md  create_icon.py  edit_import_view_ids.py  eslint.config.js  index-minimal.html  index-simple.html  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  temp_snippet.txt  test_output.txt  tsconfig.json  vite.config.minimal.ts  vite.config.simple.ts  vite.config.ts  vitest.config.integration.ts  vitest.config.ts
.cursor/: mcp.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  site_or_protocol_request.yml
.github/workflows/: README.md  ci.yml  release.yml  security.yml
.husky/: post-commit  post-merge
config/: production.json
docs/: DOWNLOAD_CONCURRENCY_FIX_PLAN.md  DOWNLOAD_CONCURRENCY_OPTIMIZATION_TASKS.md  DOWNLOAD_FIX_SUMMARY.md  DOWNLOAD_QUEUE_ARCHITECTURE.md  DOWNLOAD_SYSTEM_CRITICAL_FIX.md  DOWNLOAD_SYSTEM_FINAL_FIX.md  DOWNLOAD_SYSTEM_REFACTOR_PLAN.md  DOWNLOAD_SYSTEM_REFACTOR_V2.md  ai-agent-technical-guide.md  app-regression-test-plan-2026-05-06.md  architecture-functional-design.md  architecture-v2-delivery-plan-2026-04-10.md  architecture-v2-execution-backlog.md  architecture.md  auto-continue-workflow.md  b-c-d-a_full_optimization_plan_20260226_115301.md  build-release.md  code-quality.md  code-review-2026-04-07.md  code_review.md  current-state.md  development.md  download_dependency_strategy.md  download_feature_audit.md  download_implementation_plan.md  download_runtime_rearchitecture.md  entrypoints.md  features.md  gsd-graphify-workflow.md  index.md  integration.md  large-codebase-ai-handoff-analysis-2026-05-06.md  non-invasive-ai-workflow.md  overview.md  preview_cli_usage.md  roadmap.md  system_functional_plan.md  system_functional_review.md  task_handoff_20260226_114332.md  tauri-e2e.md  (+4 more)
docs/plans/: 2026-02-04-download-queue-pause-design.md  2026-04-13-download-directory-ux-design.md  2026-04-13-download-directory-ux-implementation.md  2026-04-13-download-engine-rearchitecture-design.md  2026-04-13-download-engine-rearchitecture-implementation.md  2026-04-13-full-system-refactor-assessment.md  2026-04-15-backend-write-path-boundary-map.md  2026-04-15-download-core-call-chain-analysis.md  2026-04-15-hermes-graphify-gsd-skill-real-test-plan.md  2026-04-15-hermes-graphify-gsd-skills-finalization-summary.md  2026-04-15-mainline-only-cleanup-plan.md  2026-04-15-system-architecture-optimization-plan.md  2026-04-16-ai-auto-dev-best-practices-survey.md  2026-04-16-auto-continue-e2e-test.md  (+5 more)
fixes/: fix1_status_mapping.ts  fix3_task_priority.ts  summary_of_issues.md
scripts/: ai-workflow.sh  audit-rust.sh  check-gitnexus-risk.mjs  deploy-verify.rs  dev.bat  dev.ps1  fix-rust-env.bat  graphify-sync.sh  hermes-auto-continue-checkpoint.sh  hermes-auto-continue-config.sh  hermes-auto-continue-mark-complete.sh  hermes-auto-continue-notify.sh  hermes-auto-continue-status.sh  hermes-auto-continue-summary.sh  hermes-auto-continue-trigger.sh  install-hermes-auto-continue-cron.sh  migrate_rust_v2.js  migrate_v2.js  performance-benchmark.rs  prepare-sidecars.mjs  quick-start.bat  tauri-mcp-smoke.mjs  validate-sidecars.mjs  verify-env.ps1
src/: App.test.tsx  App.tsx  i18n.ts  main-minimal.tsx  main-simple.tsx  main.tsx
src-tauri/: Cargo.toml  check_output.txt  deny.toml  errors.json  tauri-fixed.conf.json  tauri-minimal.conf.json  tauri-simple.conf.json  tauri.conf.json  tauri.conf.local.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: migrated.json
src-tauri/examples/: preview_cli.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main-fixed.rs  main-minimal.rs  main-original.rs  main-simple.rs  main.rs
src-tauri/src/commands/: config.rs  download.rs  import.rs  mod.rs  system.rs  youtube.rs
src-tauri/src/core/: app_bootstrap.rs  config.rs  config_test.rs  download_provider.rs  downloader.rs  error_handling.rs  error_handling_integration_tests.rs  external_tool_compat.rs  external_tool_update.rs  external_tools.rs  file_parser.rs  file_parser_integration_tests.rs  file_parser_tests.rs  integration_tests.rs  integrity_checker.rs  m3u8_downloader.rs  m3u8_integration_tests.rs  manager.rs  manager_integration_tests.rs  manager_test.rs  mod.rs  models.rs  monitoring.rs  monitoring_integration_tests.rs  part_file.rs  progress_tracker.rs  progress_tracker_integration_tests.rs  queue_scheduler.rs  resume_downloader.rs  resume_downloader_integration_tests.rs  runtime.rs  system_integration_tests.rs  youtube_downloader.rs  youtube_downloader_integration_tests.rs  ytdlp_downloader.rs  ytdlp_downloader_tests.rs  ytdlp_support.rs
src-tauri/src/core/external_tools/: config_store.rs  mod.rs  registry.rs  resolver.rs  status.rs  update.rs
src-tauri/src/core/manager/: concurrency_slot_tests.rs  events.rs  identity.rs  integrity.rs  queue.rs  runtime_state_tests.rs  state.rs  stats.rs  ytdlp_target_tests.rs
src-tauri/src/downloaders/: http_downloader.rs  m3u8_downloader_impl.rs  mod.rs  youtube_downloader_impl.rs
src-tauri/src/engine/: commands.rs  mod.rs  task_engine.rs
src-tauri/src/infra/: capability_service.rs  command_error.rs  download_event_bridge.rs  event_bus.rs  mod.rs
src-tauri/src/infra/providers/: capability_service.rs  http_provider.rs  m3u8_provider.rs  mod.rs  youtube_provider.rs
src-tauri/src/parsers/: csv_parser.rs  excel_parser.rs  m3u8_parser.rs  mod.rs
src-tauri/src/utils/: encoding.rs  file_utils.rs  logging.rs  mod.rs  network.rs  process.rs  validation.rs
(+190 files in other folders)
