[package]
name = "video-downloader-pro"
version = "1.0.0"
description = "Professional batch video downloader"
authors = ["Video Downloader Team"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "1.5", features = [ "window-set-icon", "dialog-message", "app-show", "window-set-always-on-top", "window-set-title", "window-set-position", "path-all", "system-tray", "fs-remove-file", "global-shortcut-all", "window-print", "fs-write-file", "fs-read-dir", "shell-execute", "notification-all", "window-show", "window-set-fullscreen", "shell-open", "window-maximize", "window-set-skip-taskbar", "window-set-size", "http-all", "window-set-min-size", "os-all", "fs-rename-file", "fs-remove-dir", "window-set-resizable", "fs-exists", "fs-read-file", "dialog-save", "window-set-max-size", "shell-sidecar", "fs-create-dir", "fs-copy-file", "dialog-open", "dialog-ask", "window-minimize", "window-hide", "dialog-confirm", "window-start-dragging", "window-set-focus", "window-request-user-attention", "window-center", "app-hide", "window-close"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP 客户端和下载
reqwest = { version = "0.11", features = ["stream", "json", "rustls-tls", "blocking"] }
bytes = "1.5"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }
# 高性能时间测量
coarsetime = "0.1"

# 加密哈希函数库 (RustCrypto)
sha2 = "0.10"           # SHA-2 family (SHA-256, SHA-512)
blake2 = "0.10"         # BLAKE2 family
md-5 = "0.10"           # MD5 (for legacy support)
sha1 = "0.10"           # SHA-1 (for legacy support)
digest = "0.10"         # Common traits for hash functions
hex = "0.4"             # Hex encoding/decoding
base64 = "0.22"         # Base64 encoding/decoding
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
cipher = "0.4"

# UUID 生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 日志系统
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 文件处理
csv = "1.3"
encoding_rs = "0.8"
encoding_rs_io = "0.1"  # 流式编码转换
chardetng = "0.1"       # 高精度编码检测
calamine = "0.22"       # Excel 读取
walkdir = "2.3"

# M3U8 支持
hls_m3u8 = "0.4"
m3u8-rs = "5.0"

# YouTube 下载支持
yt-dlp = { version = "1.3.4", features = ["tracing"] }

# Futures 工具集
futures-util = "0.3"
url = "2.4"

# 正则表达式
regex = "1.10"

# 配置管理
config = "0.13"
directories = "5.0"

# 系统监控
sysinfo = "0.29"

# 并发和同步
parking_lot = "0.12"
dashmap = "5.5"

# 随机数生成
rand = "0.8"

[dev-dependencies]
# 测试依赖
tempfile = "3.8"
tokio-test = "0.4"

[[bin]]
name = "video-downloader-pro"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
integration-tests = []

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "libloaderapi", "combaseapi"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
